--- a/package.json
+++ b/package.json
@@ -1,10 +1,22 @@
 {
+  "scripts": {
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.0",
+    "nodemailer": "^6.9.1",
     "pg": "^8.10.0",
-    "sequelize": "^6.30.0"
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.30.0",
+    "uniqid": "^5.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
